// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field DocumentLibrary should have a helptext 1`] = `
<div class="form-group">
  <div class="liferay-ddm-form-field-document-library">
    <div class="input-group">
      <div class="input-group-item input-group-prepend"><input class="field form-control" disabled="" id="textFieldinputFile" type="text"></div>
      <div class="input-group-append input-group-item input-group-item-shrink"><button class="btn btn-secondary select-button" type="button"><span class="lfr-btn-label">select</span></button></div>
    </div><input name="textField" type="hidden" value="">
  </div><span class="form-text">Type something</span>
</div>
`;

exports[`Field DocumentLibrary should have a label 1`] = `
<div class="form-group"><label>label </label>
  <div class="liferay-ddm-form-field-document-library">
    <div class="input-group">
      <div class="input-group-item input-group-prepend"><input class="field form-control" disabled="" id="textFieldinputFile" type="text"></div>
      <div class="input-group-append input-group-item input-group-item-shrink"><button class="btn btn-secondary select-button" type="button"><span class="lfr-btn-label">select</span></button></div>
    </div><input name="textField" type="hidden" value="">
  </div>
</div>
`;

exports[`Field DocumentLibrary should have a placeholder 1`] = `
<div class="form-group">
  <div class="liferay-ddm-form-field-document-library">
    <div class="input-group">
      <div class="input-group-item input-group-prepend"><input class="field form-control" disabled="" id="textFieldinputFile" type="text"></div>
      <div class="input-group-append input-group-item input-group-item-shrink"><button class="btn btn-secondary select-button" type="button"><span class="lfr-btn-label">select</span></button></div>
    </div><input name="textField" type="hidden" placeholder="Placeholder" value="">
  </div>
</div>
`;

exports[`Field DocumentLibrary should have a spritemap 1`] = `
<div class="form-group">
  <div class="liferay-ddm-form-field-document-library">
    <div class="input-group">
      <div class="input-group-item input-group-prepend"><input class="field form-control" disabled="" id="textFieldinputFile" type="text"></div>
      <div class="input-group-append input-group-item input-group-item-shrink"><button class="btn btn-secondary select-button" type="button"><span class="lfr-btn-label">select</span></button></div>
    </div><input name="textField" type="hidden" value="">
  </div>
</div>
`;

exports[`Field DocumentLibrary should have a value 1`] = `
<div class="form-group">
  <div class="liferay-ddm-form-field-document-library">
    <div class="input-group">
      <div class="input-group-item input-group-prepend"><input class="field form-control" disabled="" id="textFieldinputFile" type="text"></div>
      <div class="input-group-append input-group-item input-group-item-shrink"><button class="btn btn-secondary select-button" type="button"><span class="lfr-btn-label">select</span></button></div>
    </div><input name="textField" type="hidden" value="[object Object]">
  </div>
</div>
`;

exports[`Field DocumentLibrary should have an id 1`] = `
<div class="form-group">
  <div class="liferay-ddm-form-field-document-library">
    <div class="input-group">
      <div class="input-group-item input-group-prepend"><input class="field form-control" disabled="" id="textFieldinputFile" type="text"></div>
      <div class="input-group-append input-group-item input-group-item-shrink"><button class="btn btn-secondary select-button" type="button"><span class="lfr-btn-label">select</span></button></div>
    </div><input id="ID" name="textField" type="hidden" value="">
  </div>
</div>
`;

exports[`Field DocumentLibrary should not be readOnly 1`] = `
<div class="form-group">
  <div class="liferay-ddm-form-field-document-library">
    <div class="input-group">
      <div class="input-group-item input-group-prepend"><input class="field form-control" disabled="" id="textFieldinputFile" type="text"></div>
      <div class="input-group-append input-group-item input-group-item-shrink"><button class="btn btn-secondary select-button" type="button"><span class="lfr-btn-label">select</span></button></div>
    </div><input name="textField" type="hidden" value="">
  </div>
</div>
`;

exports[`Field DocumentLibrary should not be required 1`] = `
<div class="form-group">
  <div class="liferay-ddm-form-field-document-library">
    <div class="input-group">
      <div class="input-group-item input-group-prepend"><input class="field form-control" disabled="" id="textFieldinputFile" type="text"></div>
      <div class="input-group-append input-group-item input-group-item-shrink"><button class="btn btn-secondary select-button" type="button"><span class="lfr-btn-label">select</span></button></div>
    </div><input name="textField" type="hidden" value="">
  </div>
</div>
`;

exports[`Field DocumentLibrary should render Label if showLabel is true 1`] = `
<div class="form-group"><label>text </label>
  <div class="liferay-ddm-form-field-document-library">
    <div class="input-group">
      <div class="input-group-item input-group-prepend"><input class="field form-control" disabled="" id="textFieldinputFile" type="text"></div>
      <div class="input-group-append input-group-item input-group-item-shrink"><button class="btn btn-secondary select-button" type="button"><span class="lfr-btn-label">select</span></button></div>
    </div><input name="textField" type="hidden" value="">
  </div>
</div>
`;
